--- a/amozesh.html
+++ b/amozesh.html
@@ -610,7 +610,7 @@
     </div>
 
     <div class="nav-tabs">
-      <a href="server_list.html" class="nav-tab">لیست سرورها</a>
+      <a href="index.html" class="nav-tab">لیست سرورها</a>
       <a href="amozesh.html" class="nav-tab active">آموزش</a>
     </div>
 
