--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
     </div>
 
     <div class="nav-tabs">
-      <a href="server_list.html" class="nav-tab active">لیست سرورها</a>
+      <a href="index.html" class="nav-tab active">لیست سرورها</a>
       <a href="amozesh.html" class="nav-tab">آموزش</a>
     </div>
 
