--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
   <meta name="robots" content="noindex, nofollow">
   <title>لیست سرورها</title>
-  <link href="https://cdn.jsdelivr.net/gh/rastikerdar/dana-font/dist/dana-font.css" rel="stylesheet" type="text/css" />
+  <link href="Webfonts/css/fontiran.css" rel="stylesheet" type="text/css" />
   <style>
     :root {
       --primary-color: #3b82f6;
@@ -34,7 +34,7 @@
     }
 
     body {
-      font-family: 'dana', sans-serif;
+      font-family: 'dana', tahoma, sans-serif;
       direction: rtl;
       background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
       color: var(--text-primary);
